[package]
name = "windows_tool"
version = "0.0.8"
edition = "2024"

authors = ["小萌新 <3209970865@qq.com>"]
license = "MIT"
documentation = "https://docs.rs/crate/windows_tool/latest"
description = """
一个 Windows 库 可以设置端口代理

elevate 提升权限 管理员权限
registry 注册表
port_forwarding 端口转发设置
steam vdf 格式
steam apex 启动项设置
"""
keywords = [
    "windows",
    "elevate",
    "administrator",
    "registry",
    "port_forwarding",
]

[dependencies]
ansi_term = "0.12.1" #控制台打印带颜色
chrono = "0.4.42" #时间格式化
serde = { version = "1.0.223", features = ["derive"], optional = true }#将数据转换成json 字符串用的
serde_json = "1.0.145"
indexmap = { version = "2.11.4", optional = true } #仅在vdf中使用

# registry
lazy_static = { version = "1.5.0", optional = true } #惰性静态
winreg = { version = "0.55.0", optional = true } #window注册表属性

# port_forwarding
#转换控制台GBK打印
encoding_rs = { version = "0.8.35", optional = true }
hex = "0.4.3"

[dependencies.winapi]
version = "0.3.9"
features = ["securitybaseapi", "processthreadsapi", "minwindef", "winnt", "winreg", "combaseapi", "knownfolders", "shlobj"]
optional = true
#https://github.com/microsoft/windows-rs/tree/master/crates/samples
#windows-sys = { version = "0.61.0" }


[features]
default = ["elevated", "registry", "port_forwarding", "game"] #默认启用的特性
game = ["steam"] #游戏
elevated = ["dep:winapi"] #提权
registry = ["dep:lazy_static", "dep:winreg"] #注册表编辑
port_forwarding = ["dep:encoding_rs", "dep:serde"] #端口转发
vdf = ["dep:winreg", "registry", "dep:indexmap"] # Steam vdf https://developer.valvesoftware.com/wiki/KeyValues
steam = ["dep:winreg", "registry", "dep:indexmap", "vdf"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
