[package]
name = "windows_tool"
version = "0.0.9"
edition = "2024"
authors = ["小萌新 <3209970865@qq.com>"]
license = "MIT"
documentation = "https://docs.rs/crate/windows_tool/latest"
description = """
Windows 实用库：提权检测、注册表、IPv4 端口转发、Steam VDF/启动项与部分游戏封装。
"""
keywords = [
    "windows",
    "elevate",
    "administrator",
    "registry",
    "port_forwarding",
]

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.42"
serde = { version = "1.0.223", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
indexmap = { version = "2.11.4", optional = true }
lazy_static = { version = "1.5.0", optional = true }
winreg = { version = "0.56.0", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
hex = { version = "0.4.3", optional = true }

[dependencies.winapi]
version = "0.3.9"
features = [
    "securitybaseapi",
    "processthreadsapi",
    "minwindef",
    "winnt",
    "winreg",
    "combaseapi",
    "knownfolders",
    "shlobj",
    "winbase",
]
optional = true

# `lib.rs` 中仅单元测试 `tests_hex_sample` 使用外部 `hex`；运行时由 `steam` feature 启用同名依赖。
[dev-dependencies]
hex = "0.4.3"

[features]
default = ["elevated", "registry", "port_forwarding", "game"]
game = ["steam"]
elevated = ["dep:winapi", "dep:encoding_rs"]
registry = ["dep:lazy_static", "dep:winreg", "dep:encoding_rs", "dep:winapi"]
port_forwarding = ["dep:encoding_rs", "dep:serde", "dep:serde_json", "dep:winapi"]
vdf = ["dep:winreg", "registry", "dep:indexmap"]
steam = ["dep:winreg", "registry", "dep:indexmap", "vdf", "dep:hex", "dep:serde"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]
